syntax = "proto3";

package user;

service UserService {
  rpc Create(User) returns (User);
  rpc CheckUniqueEmail(CheckUniqueRequest) returns (CheckUniqueRespons);
  rpc GetUserByRfshToken(IdRequest) returns (User);
  rpc GetUserByEmail(IdRequest) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc GetUserByID(IdRequest) returns (User);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersRespons);
  rpc DeleteUserByID(IdRequest) returns (DeleteUserByIDRespons);
}

message GetAllProductsRespons{
  User user = 1;
  repeated Product products = 2;
}

message GetAllProductUserByUserIdReq{
  string user_id = 1;
  int64 page = 2;
  int64 limit = 3;
}


message Product{
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string price = 5;
  string contact_info = 6;
}



message DeleteUserByIDRespons{
  string result = 1;
}

message GetAllUsersRespons{
  repeated User user = 1;
}

message GetAllUsersRequest{
  int64 page = 1;
  int64 limit = 2;
}

message IdRequest{
  string id = 1;
}

message GetUserByRfshTokenRequest{
  string token = 1;
}


message CheckUniqueResult {
  int64 result = 1;
}


message User{
  string id = 1;
  string full_name = 2;
  string city = 3;
  string email = 4;
  string password = 5;
  string phone = 6;
  string role = 7;
  string refresh_token = 8;
}

message CheckUniqueRespons{
  bool is_exist = 1;
}

message CheckUniqueRequest{
  string column = 1;
  string value = 2;
}